--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1,17 +1,3 @@
-:root {
-  --mainColor: #a168d1;
-  --lightColor: #c8aae4;
-  --lighterColor: #ddccee;
-  --ultralightColor: #faf5ff;
-  --ultralightColorWithOpacity: #f9f4ffe6;
-  --darkColor: #5f2aa2;
-  --darkerColor: #3c2484;
-  --highlightedColor: #ddfb61;
-  --secondColor: #9ecf6d;
-  --blackColor: #121212;
-  --whiteColor: #eeeeee;
-}
-
 html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -25,7 +11,7 @@ body {
   -o-transition: 0.5s;
   transition: 0.5s;
   background-color: white;
-  color: var(--blackColor);
+  color: #131313;
   text-align: center;
   margin: 0;
   padding: 0;
@@ -41,9 +27,9 @@ body {
   height: 5rem;
   font-size: 3rem;
   text-align: center;
-  background-color: var(--ultralightColor);
-  color: var(--darkColor);
-  border-bottom: 2px solid var(--mainColor);
+  background-color: #fbf7fe;
+  color: #5e2da6;
+  border-bottom: 2px solid #a366d3;
   z-index: 98;
 }
 
@@ -76,7 +62,7 @@ body {
   left: 0;
   width: 100%;
   height: 3px;
-  background-color: var(--mainColor);
+  background-color: #a366d3;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
@@ -105,7 +91,7 @@ body {
 
 main {
   text-align: center;
-  color: var(--blackColor);
+  color: #131313;
 }
 
 .sectionWrapper {
@@ -113,7 +99,7 @@ main {
   display: block;
   float: left;
   box-sizing: border-box;
-  background-color: var(--blackColor);
+  background-color: #131313;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -150,7 +136,7 @@ main {
 }
 
 .sectionWrapper .sectionLink:hover+.sectionInfo header .headline {
-  color: var(--lightColor);
+  color: #c7abe5;
 }
 
 .sectionWrapper .sectionLink:hover~.sectionBackground {
@@ -164,6 +150,9 @@ main {
 .sectionWrapper .sectionBackground {
   position: absolute;
   background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
   opacity: 0.4;
   top: 0;
@@ -190,7 +179,7 @@ main {
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
   top: 50%;
-  color: var(--ultralightColor);
+  color: #fbf7fe;
   pointer-events: none;
   z-index: 2;
 }
@@ -211,13 +200,13 @@ main {
 .sectionWrapper .sectionInfo .subhead {
   margin: 0 auto;
   font-size: 1.5rem;
-  color: var(--whiteColor);
+  color: #efefef;
 }
 
 .sectionWrapper .sectionInfo .sectionDate {
   margin: 0.2rem 0 0 0;
   font-size: 0.8rem;
-  color: var(--lighterColor);
+  color: #decbef;
 }
 
 .sectionWrapper:nth-child(1) .sectionBackground {
@@ -233,8 +222,8 @@ main {
 }
 
 *::selection {
-  background-color: var(--lighterColor);
-  color: var(--darkerColor);
+  background-color: #decbef;
+  color: #3a2281;
 }
 
 
@@ -265,7 +254,7 @@ article #articleInfo header {
   transform: translateY(-50%);
   top: 50%;
   font-size: 3rem;
-  color: var(--ultralightColor);
+  color: #fbf7fe;
   z-index: 1;
 }
 
@@ -277,11 +266,18 @@ article #articleMainImage, article #AboutImage {
   -o-background-size: cover;
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
   bottom: 0;
   left: 0;
   height: 100%;
   width: 100%;
+}
+
+article a {
+  color: #a366d3;
+}
+
+article a:visited {
+  color: #3c2484;
 }
 
 article section, article #bottomFooter {
@@ -289,7 +285,7 @@ article section, article #bottomFooter {
   max-width: 85%;
   margin: 0 auto;
   text-align: justify;
-  color: var(--blackColor);
+  color: #131313;
   margin-bottom: 4rem;
 }
 
@@ -302,13 +298,13 @@ article h6 {
   display: inline-block;
   font-size: 1rem;
   margin: 0.5rem 0.5rem 0.5rem 0;
-  color: var(--darkColor);
+  color: #5e2da6;
 }
 
 article #bottomFooter {
   margin-top: 10rem;
   margin-bottom: 2rem;
-  color: var(--lighterColor);
+  color: #decbef;
 }
 
 article #bottomFooter p {
@@ -318,11 +314,11 @@ article #bottomFooter p {
 }
 
 article #bottomFooter p a:link {
-  color: var(--lighterColor);
+  color: #decbef;
 }
 
 article #bottomFooter p a:visited {
-  color: var(--lighterColor);
+  color: #decbef;
 }
 
 article #bottomFooter h5 {
@@ -343,7 +339,7 @@ article #bottomFooter h5 {
   left: 0;
   overflow-x: hidden;
   margin-top: 5rem;
-  background-color: var(--lighterColor);
+  background-color: #decbef;
   -webkit-transition: 0.4s cubic-bezier(0.8, 0.3, 0.1, 1.0);
   -moz-transition: 0.4s cubic-bezier(0.8, 0.3, 0.1, 1.0);
   -ms-transition: 0.4s cubic-bezier(0.8, 0.3, 0.1, 1.0);
@@ -372,7 +368,7 @@ article #bottomFooter h5 {
   text-decoration: none;
   padding-bottom: 0;
   overflow: hidden;
-  color: var(--darkerColor);
+  color: #3a2281;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
@@ -382,8 +378,8 @@ article #bottomFooter h5 {
 }
 
 #sidebar #sideNav #sidebarMenu li a:hover {
-  color: var(--highlightedColor);
-  background-color: var(--darkColor);
+  color: #ddff66;
+  background-color: #5e2da6;
 }
 
 #sidebarFooter {
@@ -392,7 +388,7 @@ article #bottomFooter h5 {
   text-align: center;
   width: 100%;
   font-size: 0.75rem;
-  color: var(--mainColor);
+  color: #a366d3;
   white-space: nowrap;
 }
 
