--- a/cssjs/mainStyle.css
+++ b/cssjs/mainStyle.css
@@ -3,7 +3,7 @@ html {
   -ms-text-size-adjust: 100%;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-transition: 0.5s;
   -moz-transition: 0.5s;
   -ms-transition: 0.5s;
@@ -40,42 +40,68 @@ body {
   height: 3rem;
   margin: 1rem;
 }
+#toggleMenu {
+  display: none;
+}
 #toggleSidebar {
   display: inline-block;
   position: absolute;
-  width: 1.7rem;
-  height: 0.9rem;
-  top: 50%;
+  width: 5rem;
+  height: 5rem;
+  top: 0;
   left: 0;
-  margin: -0.4rem 0 0 2.5rem;
-  vertical-align: middle;
+  /* margin: -0.4rem 0 0 2.5rem; */
+  margin: 0;
+  /* vertical-align: middle; */
   cursor: pointer;
 }
-#toggleSidebar span {
+#toggleSidebar .wrap {
+  display: block;
   position: absolute;
-  left: 0;
+  top: 1.75rem;
+  left: 1.75rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  -webkit-transition: transform 0.15s cubic-bezier(0.04, 0.04, 0.12, 0.96), -webkit-transform 0.15s cubic-bezier(0.04, 0.04, 0.12, 0.96);
+  transition: transform 0.15s cubic-bezier(0.04, 0.04, 0.12, 0.96), -webkit-transform 0.15s cubic-bezier(0.04, 0.04, 0.12, 0.96);
+  -webkit-transform: none;
+  transform: none;
+}
+#toggleSidebar .wrap .line {
+  display: block;
+  position: absolute;
   width: 100%;
-  height: 3px;
+  height: 2px;
+  top: calc(0.75rem - 1px);
   background-color: #a366d3;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -ms-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+  -webkit-transition: transform 0.15s cubic-bezier(0.52, 0.16, 0.52, 0.84) 0.1s, -webkit-transform 0.15s cubic-bezier(0.52, 0.16, 0.52, 0.84) 0.1s;
+  transition: transform 0.15s cubic-bezier(0.52, 0.16, 0.52, 0.84) 0.1s, -webkit-transform 0.15s cubic-bezier(0.52, 0.16, 0.52, 0.84) 0.1s;
 }
-#toggleSidebar span:nth-of-type(1) {
-  top: 0;
+#toggleSidebar .wrap:first-child .line {
+  -webkit-transform: translateY(-0.35rem);
+  transform: translateY(-0.35rem);
 }
-#toggleSidebar span:nth-of-type(2) {
-  bottom: 0;
+#toggleSidebar .wrap:last-child .line {
+  -webkit-transform: translateY(0.35rem);
+  transform: translateY(0.35rem);
+}
+#toggleMenu:checked~#topNav #toggleSidebar .wrap {
+  -webkit-transition: transform 0.3s cubic-bezier(0.04, 0.04, 0.12, 0.96) 0.1s, -webkit-transform 0.3s cubic-bezier(0.04, 0.04, 0.12, 0.96) 0.1s;
+  transition: transform 0.3s cubic-bezier(0.04, 0.04, 0.12, 0.96) 0.1s, -webkit-transform 0.3s cubic-bezier(0.04, 0.04, 0.12, 0.96) 0.1s;
+}
+#toggleMenu:checked~#topNav #toggleSidebar .wrap:first-child {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+#toggleMenu:checked~#topNav #toggleSidebar .wrap:last-child {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+#toggleMenu:checked~#topNav #toggleSidebar .wrap .line {
+  transform: none;
+  -webkit-transform: none;
+  transition: transform 0.15s cubic-bezier(0.04, 0.04, 0.12, 0.96), -webkit-transform 0.15s cubic-bezier(0.04, 0.04, 0.12, 0.96);
+  -webkit-transition: transform 0.15s cubic-bezier(0.04, 0.04, 0.12, 0.96), -webkit-transform 0.15s cubic-bezier(0.04, 0.04, 0.12, 0.96);
 }
 
 /* main */
@@ -88,6 +114,8 @@ main {
   display: block;
   float: left;
   box-sizing: border-box;
+  height: calc((100vh - 5rem - 6px) / 2);
+  width: 100%;
   background-color: #131313;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -96,20 +124,6 @@ main {
   /* height: calc((100vh - 5rem - 6px) / 2); */
   /* width: 100%; */
   margin: 0 0 2px 0;
-}
-.sectionWrapper:nth-child(1) {
-  height: calc((100vh - 5rem - 6px) / 3);
-  width: 100%;
-}
-.sectionWrapper:nth-child(2) {
-  height: calc((100vh - 5rem - 6px) / 3 * 2);
-  width: 50%;
-  border-right: 1px solid white;
-}
-.sectionWrapper:nth-child(3) {
-  height: calc((100vh - 5rem - 6px) / 3 * 2);
-  width: 50%;
-  border-left: 1px solid white;
 }
 .sectionWrapper .sectionLink {
   position: absolute;
@@ -186,15 +200,15 @@ main {
   font-size: 0.8rem;
   color: #decbef;
 }
-.sectionWrapper:nth-child(1) .sectionBackground {
+.sectionWrapper:first-child .sectionBackground {
   background-image: url(/image/readme.png);
 }
-.sectionWrapper:nth-child(2) .sectionBackground {
+.sectionWrapper:last-child .sectionBackground {
   background-image: url(/image/black.svg);
 }
-.sectionWrapper:nth-child(3) .sectionBackground {
+/* .sectionWrapper:nth-child(3) .sectionBackground {
   background-image: url(/image/blue.svg);
-}
+} */
 *::selection {
   background-color: #decbef;
   color: #3a2281;
@@ -258,26 +272,31 @@ article img {
   width: 900px;
   max-width: 85vw;
 }
-article h3 {
+article h2 {
   color: #5e2da6;
   font-size: 2.5rem;
 }
-article h4 {
+article h3 {
   font-size: 1.3rem;
 }
-article h5 {
+article h4 {
   display: inline-block;
   font-size: 1.2rem;
   margin: 0;
 }
-article h6 {
+article p {
+  margin-bottom: 5rem;
+}
+article .date {
   display: inline-block;
   font-size: 1.1rem;
   margin: 0.5rem 0.5rem 0.5rem 0;
   color: #5e2da6;
 }
-article p {
-  margin-bottom: 5rem;
+article #link {
+  display: inline-block;
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
 }
 article #bottomFooter {
   margin-top: 10rem;
@@ -380,43 +399,16 @@ article #bottomFooter h5 {
     margin: 0.8rem;
   }
   #toggleSidebar {
-    width: 1.7rem;
-    height: 0.9rem;
-    top: 50%;
-    margin: -0.4rem 0 0 2rem;
+    width: 4rem;
+    height: 4rem;
   }
-  #toggleSidebar span {
-    height: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px;
+  #toggleSidebar .wrap {
+    top: 1.25rem;
+    left: 1.25rem;
   }
-
   /* main */
-  .sectionWrapper:nth-child(1) {
-    height: calc((100vh - 4rem - 8px) / 4);
-    width: 100%;
-  }
-  .sectionWrapper:nth-child(2) {
-    height: calc((100vh - 4rem - 8px) / 8 * 3);
-    width: 100%;
-    border-right: 0;
-  }
-  .sectionWrapper:nth-child(3) {
-    height: calc((100vh - 4rem - 8px) / 8 * 3);
-    width: 100%;
-    border-left: 0;
-  }
-  .sectionWrapper .sectionInfo header .headline {
-    font-size: 3rem;
-  }
-  .sectionWrapper .sectionInfo .subhead {
-    font-size: 1.25rem;
-  }
-  .sectionWrapper .sectionInfo .sectionDate {
-    font-size: 0.8rem;
+  .sectionWrapper {
+    height: calc((100vh - 4rem - 6px) / 2);
   }
 
   /* article */
@@ -437,17 +429,17 @@ article #bottomFooter h5 {
     width: 900px;
     max-width: 85vw;
   }
-  article h3 {
+  article h2 {
     font-size: 2.5rem;
   }
-  article h4 {
+  article h3 {
     font-size: 1.3rem;
   }
-  article h5 {
+  article h4 {
     font-size: 1.2rem;
     margin: 0;
   }
-  article h6 {
+  article h5 {
     font-size: 1.1rem;
     margin: 0.5rem 0.5rem 0.5rem 0;
   }
