--- a/cssjs/mainStyle.css
+++ b/cssjs/mainStyle.css
@@ -4,11 +4,6 @@ html {
 }
 body {
   font-family: 'Noto Sans KR', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
   background-color: white;
   color: #131313;
   text-align: center;
@@ -261,6 +256,10 @@ article #articleInfo header {
   color: #fbf7fe;
   z-index: 1;
 }
+article #articleInfo header #headline {
+  word-break: keep-all;
+  font-size: 4.5rem;
+}
 article #articleMainImage, article #AboutImage {
   position: absolute;
   background-position: center;
@@ -442,6 +441,9 @@ article #bottomFooter h5 {
     margin-bottom: 4rem;
   }
   article #articleInfo header {
+    font-size: 3rem;
+  }
+  article #articleInfo header #headline {
     font-size: 3rem;
   }
   article section, article #bottomFooter {
