--- a/cssjs/mainStyle.css
+++ b/cssjs/mainStyle.css
@@ -127,7 +127,8 @@ main {
   /* width: 100%; */
   margin: 0 0 2px;
 }
-.sectionWrapper:first-child {
+
+/* .sectionWrapper:first-child {
   width: 100%;
   margin: 0 0 2px 0;
 }
@@ -136,7 +137,13 @@ main {
 }
 .sectionWrapper:nth-child(3) {
   margin-left: 1px;
+} */
+
+.sectionWrapper {
+  width: 100%;
+  margin: 0 0 2px 0;
 }
+
 .sectionWrapper .sectionLink {
   position: absolute;
   top: 0;
